fix: style of langs on mobile

--- a/assets/scss/base/_responsive.scss
+++ b/assets/scss/base/_responsive.scss
@@ -124,6 +124,9 @@
                     }
                 }
             }
+            #langs li {
+                width: auto;
+            }
         } @else {
             .nav {
                 margin-right: 1em;
